themes/mm/sass/app.scss
//------------------------------
// Imports
//------------------------------

@import "fonts";
@import "variables";
@import "bootstrap4/bootstrap-flex";

//------------------------------
// Global Theme
//------------------------------

html {
  @include media-breakpoint-down(xs) {
    font-size: round($font-size-root / 1.12);
  }
}

body {
  font-weight: 300;
}

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 15px;
  margin-top: $spacer;
  margin-bottom: $spacer * 2.2;
  align-items: baseline;
}

.brand {
  margin-right: $spacer;
  font-size: 30px;
  color: $gray-dark;

  @include media-breakpoint-down(xs) {
    width: 100%;
    padding: 0;
    margin: 0 0 .7rem;
    text-align: center;
  }
}

.push-right {
  // Push a flex item to the right
  margin-left: auto !important;
}

.nav-link {
  @include hover-focus {
    text-decoration: $link-hover-decoration;
  }
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  margin-top: $spacer * 1.5;

  // FIXME: Remove this if possible
  > a {
    color: $body-color !important;
    text-decoration: none !important;
  }

  + blockquote {
    // Extra whitespace for quotes directly after headings
    margin-top: $spacer;
  }

  @include media-breakpoint-down(md) {
    line-height: 1.4;
  }

  @include media-breakpoint-down(xs) {
    line-height: 1.1;
  }
}

h1 {
  text-align: center;

  @include media-breakpoint-down(xs) {
    margin-top: 0;
    font-size: 2rem;
  }

  @include media-breakpoint-up(lg) {
    // More whitespace on large screens
    margin: .9rem 0 2.3rem;
  }
}

h2 {
  margin-top: $spacer * 1.9;

  @include media-breakpoint-down(xs) {
    font-size: 1.85rem;
  }
}

li {
  // Add more space between list items
  margin-bottom: $spacer / 2;
}

// Larger clickable area
// README: Reduce size if you experience problems with overlapping links
// ↳ For debugging enable CSS Outlining at http://localhost:3001/remote-debug
a {
  padding: .6em 1em;
  margin: -.6em -1em;
  word-wrap: break-word;
}

// TODO: Design better link style that's compatibile with the larger click area
.dope a {
  color: darken($brand-primary, 15%);
  text-decoration: underline;

  &:hover {
    color: $brand-primary;
  }

  &:visited {
    color: darken($brand-primary, 15%);
  }
}

.badge {
  margin: 0;
  // FIXME: Remove this if possible
  color: $white !important;
  text-decoration: none !important;
}

blockquote {
  @extend .blockquote;
  border-left-color: $gray-light;

  > p:last-of-type {
    @extend .mb-0;
  }
}

.blockquote-plain {
  padding: $spacer;
  border-left: 0;

  > .blockquote-footer {
    color: $white;
  }
}

table {
  @extend .table;
}

th,
td {
  @include media-breakpoint-down(xs) {
    padding: $table-sm-cell-padding;
  }
}

// Show abbreviation in brackets on small screens (there's no hover on mobile)
abbr[title] {
  text-decoration: none;
  border-bottom: 0;

  &::after {
    content: " (" attr(title) ")";
  }

  @include media-breakpoint-up(md) {
    border-bottom: 2px dotted $gray-light;

    &::after {
      content: "";
    }
  }
}

kbd {
  white-space: nowrap;
}

.footer {
  margin: 2rem 0 3rem;
  color: $gray-light;
  text-align: center;

  > a {
    color: inherit;
    text-decoration: none;
  }
}

.lead,
blockquote {
  @include media-breakpoint-down(xs) {
    font-size: 1rem;
  }
}

//------------------------------
// Category listing
//------------------------------

.pages {
  padding-left: 0;
  list-style: none;
}

.category-item {
  display: flex;
  margin-bottom: $spacer * 1.2;

  // FIXME: Remove this if possible
  > a {
    color: $body-color !important;
    text-decoration: none !important;
  }
}

.category-tags {
  display: inline-block;
  margin-left: $spacer / 4;
}

.time {
  color: $gray;
}


//------------------------------
// Blog posts
//------------------------------

.page,
.post {
  margin-right: auto;
  margin-left: auto;
}

.picture {
  display: inline-block;
  margin-bottom: $spacer;
}

figure {
  @extend .figure;
}

.figure-img {
  margin-bottom: $spacer / 2;
}

figcaption {
  @extend .figure-caption;
  color: $gray;
}

.meta {
  margin-top: $spacer * 1.3;
}

.author {
  white-space: pre-line;
}

.img-author {
  margin-bottom: $spacer / 2;
}

.lead.bg-primary {
  padding: $spacer;
}

.footnote-ref {
  margin-left: .2rem;
}

//------------------------------
// Homepage
//------------------------------

.home-intro {
  text-align: center;
}

.subscribe {
  padding: ($spacer-y * 2.1) 0 ($spacer-y * 2.4);
  margin-top: $spacer * 3;
  margin-bottom: $spacer;
  text-align: center;
  background-color: $brand-primary;
}

.email {
  border-color: $btn-secondary-border;
}

.btn-email {
  // Don't load bold font on homepage to keep size down
  font-weight: 300;
}

.summary-h2 {
  border-bottom: 1px solid $gray-light;
}

.article-summary > p:last-of-type::after {
  content: "…";
}

.more {
  margin-top: $spacer;
}

.all-posts {
  padding-top: $spacer;
  margin-top: $spacer;
  border-top: 1px solid $gray-light;
}

